# project-gods

./: .clang-format  .cmake-format.yml  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.cpp
headers/: entity.hpp
source/: entity.cpp
src/: CMakeLists.txt  DebugObject.h  Entity.h  PhysicsEntity.h  Player.h  TexturedEntity.h  main.cpp
